--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "basic-shop",
   "version": "1.0.0",
-  "description": "Basic shop static site",
+  "description": "Basic shop with Express backend + SQLite",
   "scripts": {
-    "start": "serve ."
+    "start": "node server.js"
   },
   "dependencies": {
-    "serve": "^14.2.0"
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.6",
+    "express": "^4.22.1",
+    "pg": "^8.17.2"
   }
 }
