--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cors": "^2.8.6",
     "dotenv": "^16.4.7",
     "express": "^4.22.1",
-    "pg": "^8.17.2"
+    "pg": "^8.17.2",
+    "sequelize": "^6.37.7",
+    "umzug": "^3.8.1"
   }
 }
